fix overflowed content, enchance responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 }
 
 html {
-  font-size: clamp(12px, 1.1vw, 16px);
+  font-size: clamp(14px, 1.1vw, 16px);
 }
 
  @plugin "daisyui/theme" {
